--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
         "symfony/dependency-injection": "^5.3"
     },
     "require-dev": {
-        "orchestra/testbench": "6.22.0",
-        "pestphp/pest": "1.21.0",
-        "worksome/coding-style": "0.4.0"
+        "orchestra/testbench": "^6.22",
+        "pestphp/pest": "^1.21",
+        "worksome/coding-style": "^0.4"
     },
     "autoload": {
         "psr-4": {
