--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
     "extends": [
-      "config:base"
+      "config:base",
+      ":preserveSemverRanges"
     ],
     "semanticCommits": "enabled",
     "branchConcurrentLimit": 10,
