chore(package): JIRA-4037 Remove lock file
Remove lock file and amend renovate config to match the correct set up for packages.

--- a/renovate.json
+++ b/renovate.json
@@ -3,7 +3,8 @@
       "config:base",
       ":preserveSemverRanges"
     ],
+    "rangeStrategy": "auto",
     "semanticCommits": "enabled",
     "branchConcurrentLimit": 10,
     "reviewersFromCodeOwners": true
-  }
+}
