--- a/composer.json
+++ b/composer.json
@@ -10,22 +10,22 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "bensampo/laravel-enum": "^4.0|^5.0|^6.0",
+        "php": "^8.2",
+        "bensampo/laravel-enum": "^6.2",
         "guzzlehttp/guzzle": "^7.4",
-        "illuminate/container": "^8.58|^9.0",
-        "illuminate/contracts": "^8.58|^9.0",
-        "illuminate/database": "^8.58|^9.0",
-        "illuminate/support": "^8.58|^9.0",
-        "nesbot/carbon": "^2.58",
-        "nuwave/lighthouse": "^5.48",
-        "phpoffice/phpspreadsheet": "^1.23",
-        "symfony/dependency-injection": "^6.0"
+        "illuminate/container": "^9.46",
+        "illuminate/contracts": "^9.46",
+        "illuminate/database": "^9.46",
+        "illuminate/support": "^9.46",
+        "nesbot/carbon": "^2.64.1",
+        "nuwave/lighthouse": "^5.69.1",
+        "phpoffice/phpspreadsheet": "^1.26",
+        "symfony/dependency-injection": "^6.2.3"
     },
     "require-dev": {
-        "orchestra/testbench": "6.24.1|^7.4",
-        "pestphp/pest": "1.22.3",
-        "worksome/coding-style": "0.29.0"
+        "orchestra/testbench": "^7.4",
+        "pestphp/pest": "^1.22.3",
+        "worksome/coding-style": "^2.3.2"
     },
     "autoload": {
         "psr-4": {
@@ -43,15 +43,18 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true,
-            "worksome/coding-style": true
+            "worksome/coding-style": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "scripts": {
-        "phpcs": "vendor/bin/phpcs",
-        "phpcbf": "vendor/bin/phpcbf",
-        "rector-ci": "vendor/bin/rector process --dry-run --ansi",
-        "rector": "vendor/bin/rector process --ansi",
-        "pest:test": "pest --colors=always --stop-on-failure"
+        "lint": "vendor/bin/ecs --fix",
+        "test:unit": "vendor/bin/pest",
+        "test:coverage": "vendor/bin/pest --coverage --min=95",
+        "test:style": "vendor/bin/ecs",
+        "test": [
+            "@test:style",
+            "@test:unit"
+        ]
     }
 }
