--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "illuminate/database": "^9.46",
         "illuminate/support": "^9.46",
         "nesbot/carbon": "^2.64.1",
-        "nuwave/lighthouse": "^5.69.1",
+        "nuwave/lighthouse": "^5.69.1|dev-master",
         "phpoffice/phpspreadsheet": "^1.26",
         "symfony/dependency-injection": "^6.2.3"
     },
