--- a/composer.json
+++ b/composer.json
@@ -3,29 +3,23 @@
     "description": "Worksome's data export package",
     "type": "library",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Lukas Juhas",
-            "email": "lukas@worksome.com"
-        }
-    ],
     "require": {
         "php": "^8.2",
-        "bensampo/laravel-enum": "^6.2",
-        "guzzlehttp/guzzle": "^7.4",
-        "illuminate/container": "^10.0",
-        "illuminate/contracts": "^10.0",
-        "illuminate/database": "^10.0",
-        "illuminate/support": "^10.0",
-        "nesbot/carbon": "^2.64.1",
-        "nuwave/lighthouse": "^5.69.1|^6.0",
-        "phpoffice/phpspreadsheet": "^1.26",
-        "symfony/dependency-injection": "^6.2.3"
+        "bensampo/laravel-enum": "^6.11",
+        "guzzlehttp/guzzle": "^7.8",
+        "illuminate/container": "^10.0 || ^11.0",
+        "illuminate/contracts": "^10.0 || ^11.0",
+        "illuminate/database": "^10.0 || ^11.0",
+        "illuminate/support": "^10.0 || ^11.0",
+        "nesbot/carbon": "^2.72",
+        "nuwave/lighthouse": "^6.36",
+        "phpoffice/phpspreadsheet": "^1.29",
+        "symfony/dependency-injection": "^6.4 || ^7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^8.0",
-        "pestphp/pest": "^2.0",
-        "worksome/coding-style": "^2.3.2"
+        "orchestra/testbench": "^8.0 || ^9.0",
+        "pestphp/pest": "^2.34",
+        "worksome/coding-style": "^2.10"
     },
     "autoload": {
         "psr-4": {
