chore: re-add support for PHPSpreadsheet 1.x

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "illuminate/support": "^10.0 || ^11.0",
         "nesbot/carbon": "^2.72",
         "nuwave/lighthouse": "^6.36",
-        "phpoffice/phpspreadsheet": "^2.2.2",
+        "phpoffice/phpspreadsheet": "^1.29.1 || ^2.2.2",
         "symfony/dependency-injection": "^6.4 || ^7.0"
     },
     "require-dev": {
