--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "illuminate/contracts": "^10.0 || ^11.0",
         "illuminate/database": "^10.0 || ^11.0",
         "illuminate/support": "^10.0 || ^11.0",
-        "nesbot/carbon": "^2.72",
+        "nesbot/carbon": "^2.72 || ^3.0",
         "nuwave/lighthouse": "^6.36",
         "phpoffice/phpspreadsheet": "^1.29.1 || ^2.2.2",
         "symfony/dependency-injection": "^6.4 || ^7.0"
