--- a/composer.json
+++ b/composer.json
@@ -7,19 +7,19 @@
         "php": "^8.2",
         "bensampo/laravel-enum": "^6.11",
         "guzzlehttp/guzzle": "^7.8",
-        "illuminate/container": "^10.0 || ^11.0",
-        "illuminate/contracts": "^10.0 || ^11.0",
-        "illuminate/database": "^10.0 || ^11.0",
-        "illuminate/support": "^10.0 || ^11.0",
+        "illuminate/container": "^10.0 || ^11.0 || ^12.0",
+        "illuminate/contracts": "^10.0 || ^11.0 || ^12.0",
+        "illuminate/database": "^10.0 || ^11.0 || ^12.0",
+        "illuminate/support": "^10.0 || ^11.0 || ^12.0",
         "nesbot/carbon": "^2.72 || ^3.0",
         "nuwave/lighthouse": "^6.36",
-        "phpoffice/phpspreadsheet": "^1.29.1 || ^2.2.2",
+        "phpoffice/phpspreadsheet": "^1.29.1 || ^2.2.2 || ^4.0",
         "symfony/dependency-injection": "^6.4 || ^7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^8.0 || ^9.0",
-        "pestphp/pest": "^2.34",
-        "worksome/coding-style": "^2.10"
+        "orchestra/testbench": "^8.0 || ^9.0 || ^10.0",
+        "pestphp/pest": "^2.34 || ^3.7",
+        "worksome/coding-style": "^2.10 || ^3.1"
     },
     "autoload": {
         "psr-4": {
