feat: add support for Laravel 12

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
-vendor
-.phpunit.result.cache
-.idea
-.DS_Store
-composer.lock
+/.idea
+/build
+/vendor
+/.php_cs.cache
+/composer.lock
+/phpunit.xml
+/phpstan.neon
+.php_cs
+.php_cs.cache
+.phpunit.cache
+.php-cs-fixer.cache
+coverage
+docs
+node_modules
+testbench.yaml
