--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,17 @@
         "illuminate/database": "^10.0 || ^11.0",
         "illuminate/support": "^10.0 || ^11.0",
         "nesbot/carbon": "^2.72 || ^3.0",
-        "nuwave/lighthouse": "^6.36",
-        "phpoffice/phpspreadsheet": "^1.29.1 || ^2.2.2",
+        "nuwave/lighthouse": "^6.49",
+        "phpoffice/phpspreadsheet": "^1.29.10 || ^2.3.8",
         "symfony/dependency-injection": "^6.4 || ^7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^8.0 || ^9.0",
-        "pestphp/pest": "^2.34",
-        "worksome/coding-style": "^2.10"
+        "larastan/larastan": "^3.1",
+        "nunomaduro/collision": "^7.10 || ^8.1.1",
+        "orchestra/testbench": "^9.12 || ^10.1",
+        "pestphp/pest": "^3.7",
+        "pestphp/pest-plugin-laravel": "^3.1",
+        "worksome/coding-style": "^3.2"
     },
     "autoload": {
         "psr-4": {
@@ -44,10 +47,12 @@
     "scripts": {
         "lint": "vendor/bin/ecs --fix",
         "test:unit": "vendor/bin/pest",
+        "test:types": "vendor/bin/phpstan analyse",
         "test:coverage": "vendor/bin/pest --coverage --min=95",
         "test:style": "vendor/bin/ecs",
         "test": [
             "@test:style",
+            "@test:types",
             "@test:unit"
         ]
     },
