--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,6 @@
     "license": "MIT",
     "require": {
         "php": "^8.3",
-        "bensampo/laravel-enum": "^6.11",
         "guzzlehttp/guzzle": "^7.8",
         "illuminate/container": "^11.0 || ^12.0",
         "illuminate/contracts": "^11.0 || ^12.0",
@@ -14,7 +13,8 @@
         "nesbot/carbon": "^2.72 || ^3.0",
         "nuwave/lighthouse": "^6.54",
         "phpoffice/phpspreadsheet": "^1.29.10 || ^2.3.8",
-        "symfony/dependency-injection": "^6.4 || ^7.0"
+        "symfony/dependency-injection": "^6.4 || ^7.0",
+        "worksome/graphql-helpers": "^0.1.15"
     },
     "require-dev": {
         "larastan/larastan": "^3.1",
